# image-occlusion-enhanced

./: .deploy.json  .flake8  .gitattributes  .gitignore  .hgignore  ANKIWEB.html  ANKIWEB.md  CHANGELOG.md  Image Occlusion 2.py  Image Occlusion Enhanced.py  LICENSE  Makefile  PAGE.md  README.md  addon.json  build_zip.sh  pyproject.toml  requirements.txt
docs/: description-alpha.md  description-anki20.md  description.md  help.md
image_occlusion_2/: add_notes.py  add_notes.py~  config.py  image_occlusion.py  image_occlusion.py~  notes_from_svg.py  notes_from_svg.pyo  resources.py  resources.pyo  svgutils.py  svgutils.pyo
image_occlusion_2/Imaging/: __init__.pyo  setup.py
image_occlusion_2/etree/: ElementPath.pyo  ElementTree.pyo  __init__.pyo
image_occlusion_2/svg-edit/: svg-editor.js
image_occlusion_2/svg-edit-2.5.1/: svg-editor.html
image_occlusion_e/: add_notes.py  image_occlusion.py  notes_from_svg.py  svgutils.py
image_occlusion_enhanced/: LICENSE  add.py  add_notes.py  config.py  dialogs.py  editor.py  image_occlusion.py  image_occlusion_main.py  main.py  nconvert.py  ngen.py  ngenerator.py  notegen.py  notegenerator.py  notes_from_svg.py  options.py  resources.py  resources.qrc  svgutils.py  template.py  utils.py
image_occlusion_enhanced/uuid/: uuid.py
src/: Image Occlusion Enhanced.py
src/image_occlusion_enhanced/: __init__.py  _version.py  add.py  config.py  consts.py  dialogs.py  editor.py  lang.py  logger.py  main.py  manifest.json  nconvert.py  ngen.py  options.py  qt.py  resources.py  template.py  utils.py  (+1 more)
tools/: fix_old_io_cards.py
(+58 files in other folders)
